<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">CampusRate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">304763790135894</string>
    <string name="fb_login_protocol_scheme">fb304763790135894</string>
    <string name="test_login">Test Login</string>
    <string name="fb_login">Login with Facebook</string>
    <string name="history">History</string>
    <string name="user_name">John Doe</string>
    <string name="user_pic">User Profile Pic</string>
    <string name="rate_count">Rate Count</string>
    <string name="average">Overall Average</string>
    <string name="attractiveness">Attractiveness</string>
    <string name="confidence">Confidence</string>
    <string name="honesty">Honesty</string>
    <string name="humor">Humor</string>
    <string name="intelligence">Intelligence</string>
    <string name="logout">LogOut</string>
    <string name="people">People</string>
    <string name="me">Me</string>
    <string name="rate">Rate</string>
    <string name="rate_anonymously">Rate Anonymously</string>
    <string name="people_img">People Image</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="comment">Comment</string>
    <string name="name">Name</string>
    <string name="add_comment">Add Comment</string>
    <string name="user_count">User Count</string>
    <string name="average_rating">Average Rating</string>
    <string name="welcome">Welcome To CampusRate</string>
    <string name="distance">Km</string>
    <string name="logo">CampusRate logo</string>
</resources>
