<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="2dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:text="@string/user_name"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:src="@mipmap/ic_launcher" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/rateCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gradient_color"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/attr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/attractiveness"
                    android:textColor="@color/textColor" />

                <RatingBar
                    android:id="@+id/attrRate"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:isIndicator="true"
                    android:progressTint="@color/textColor" />

                <TextView
                    android:id="@+id/conf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/confidence"
                    android:textColor="@color/textColor" />

                <RatingBar
                    android:id="@+id/confRate"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/textColor" />

                <TextView
                    android:id="@+id/hon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/honesty"
                    android:textColor="@color/textColor" />

                <RatingBar
                    android:id="@+id/honRate"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/textColor" />

                <TextView
                    android:id="@+id/hum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/humor"
                    android:textColor="@color/textColor" />

                <RatingBar
                    android:id="@+id/humRate"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/textColor" />

                <TextView
                    android:id="@+id/intel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:text="@string/intelligence"
                    android:textColor="@color/textColor" />

                <RatingBar
                    android:id="@+id/intRate"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:progressTint="@color/textColor" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:textColor="@color/textColor"
        android:textStyle="italic" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>